@@ -1,4 +1,5 @@
 LANGUAGENAME=English (GB)
+LOCALE=sv
 database.heading=Database
 import.heading=Import
 qsp.button=Quelea Song Pack
