@@ -6,10 +6,13 @@ quelea (2015.0) stable; urgency=normal
   * New feature - Broken bibles can be sent to devs for analysis
   * New feature - QR code generator added for mobile lyrics URL
   * New feature - Allow non-breaking lines in song lyrics
+  * New feature - Position of UI elements persists across invocations
   * Bugfix - Quick Edit now works properly
+  * Bugfix - FX UI element labels are now translated (such as colours)
+  * Bugfix - Translations now show properly when section headings are used
   * Bugfix - Quelea no longer locks up when copying a video background
   * Bugfix - window now remembers maximised state
   * Bugfix - memory leaks fixed
   * Various other minor bugfixes
 
- -- Michael Berry <michael@quelea.org>  Wednesday, 15 Oct 2014 00:00:00 +0000
+ -- Michael Berry <michael@quelea.org>  Wednesday, 16 Oct 2014 00:00:00 +0000
